crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_get_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import User


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def get_user(self, id: str) -> User:
        response = await self.client.get(f"{self.base_url}/api/users/{id}")
        response.raise_for_status()
        return User(**response.json())
