crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_get_handler.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import User


class Handlers(Protocol):
    async def get_user(self, id: str) -> User: ...
