crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_get_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter

from .handlers import Handlers
from .models import User


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/users/{id}")
    async def get_user(id: str) -> User:
        return await handlers.get_user(id=id)

    return router
