crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_map_type.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel


class Config(BaseModel):
    settings: dict[str, str]
    version: int
