crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_model_constraints.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.models
---
# Generated by Phoenix Gen — do not edit manually.

from __future__ import annotations

from pydantic import BaseModel, model_validator


class User(BaseModel):
    id: int
    name: str
    age: int

    @model_validator(mode="after")
    def _validate_constraints(self) -> User:
        if not (len(self.name) > 0 and len(self.name) <= 100):
            raise ValueError("name: constraint not satisfied")
        if not (self.age >= 0 and self.age <= 150):
            raise ValueError("age: constraint not satisfied")
        return self
