crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_handlers.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import CreateUserBody, User


class Handlers(Protocol):
    async def list_users(self) -> list[User]: ...

    async def create_user(self, body: CreateUserBody) -> User: ...

    async def get_user(self, id: str) -> User: ...

    async def delete_user(self, id: str) -> None: ...
