crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_path_client.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import Comment


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def get_comment(self, user_id: str, post_id: str) -> Comment:
        response = await self.client.get(
            f"{self.base_url}/api/users/{user_id}/posts/{post_id}"
        )
        response.raise_for_status()
        return Comment(**response.json())
