crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_path_handler.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.handlers
---
# Generated by Phoenix Gen — implement the handler methods below.

from typing import Protocol

from .models import Comment


class Handlers(Protocol):
    async def get_comment(self, user_id: str, post_id: str) -> Comment: ...
