crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_server.snap
---
source: crates/phoenix-codegen/src/python.rs
expression: files.server
---
# Generated by Phoenix Gen — do not edit manually.

from fastapi import APIRouter

from .handlers import Handlers
from .models import CreateUserBody, User


def create_router(handlers: Handlers) -> APIRouter:
    router = APIRouter()

    @router.get("/api/users")
    async def list_users() -> list[User]:
        return await handlers.list_users()

    @router.post("/api/users")
    async def create_user(body: CreateUserBody) -> User:
        return await handlers.create_user(body=body)

    @router.get("/api/users/{id}")
    async def get_user(id: str) -> User:
        return await handlers.get_user(id=id)

    @router.delete("/api/users/{id}", status_code=204)
    async def delete_user(id: str) -> None:
        await handlers.delete_user(id=id)

    return router
