crates/phoenix-codegen/src/snapshots/phoenix_codegen__python__tests__py_multi_status_all_typeless_client.snap
---
source: crates/phoenix-codegen/src/python_tests.rs
expression: files.client
---
# Generated by Phoenix Gen — do not edit manually.

import httpx

from .models import EnqueueJobResponse


class ApiClient:
    def __init__(self, base_url: str) -> None:
        self.base_url = base_url
        self.client = httpx.AsyncClient()

    async def enqueue_job(self) -> EnqueueJobResponse:
        response = await self.client.post(f"{self.base_url}/api/jobs")
        response.raise_for_status()
        return EnqueueJobResponse(status=response.status_code)
